--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -1,194 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <link rel="icon" type="image/png" href="favicon.png" />
-        <link rel="stylesheet" href="dev.css" />
 
-        <title>Slidy 3.0 - NativeJS</title>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="dev.css" />
 
-        <script defer src="dev.js"></script>
-        <style>
-            nav#dots {
-                gap: 0.5ex;
-            }
+    <title>Slidy 3.0 - NativeJS</title>
 
-            ul#slidy {
-                /* justify-content: center; */
-            }
-        </style>
-        <script>
-            let index = 4,
-                scrollPos = 0,
-                slidy = null,
-                snap = true,
-                stend = false,
-                images = true,
-                dark = window.matchMedia('(prefers-color-scheme: dark)').matches,
-                slides = [],
-                page = randomQ(1, 69),
-                limit = 9,
-                node = null,
-                nav = null,
-                stats = null,
-                loop = false;
+    <script defer src="slidy.js"></script>
+    <style></style>
+</head>
 
-            let options = {
-                index: 4,
-                axis: 'x',
-                align: 'middle',
-                duration: 375,
-                snap: true,
-                gravity: 1.2,
-                clamp: false,
-                loop: false,
-            };
+<body>
+    <fieldset>
+        <legend>
+            <img alt="Slidy" width="50" height="50" src="favicon.png" />
+            <h1>Slidy 3.0<sup>nativeJS</sup></h1>
+            <button id="dark" onclick="activate(this, dark)" style="position: absolute; right: 1em;">dark</button>
+            <p id="stats" />
+        </legend>
+    </fieldset>
+    <main>
+        <section style="--gap: 1em; --flow: row; --width: auto" tabindex="0">
+            <ul id="slidy" />
+        </section>
+        <nav id="dots"></nav>
+        <nav id="buttons">
+            <button id="prev" onclick="slidy.to(options.index - 1)">←</button>
+            <button id="reload" onclick="getPhotos(node, randomQ(1, 69), 9)">
+                <i class="icon icon-refresh"></i>
+            </button>
+            <button id="next" onclick="slidy.to(options.index + 1)">→</button>
+            <button id="clamp" onclick="slidy.update({clamp: activate(this, options.clamp)})">
+                clamp
+            </button>
+            <button id="snap" onclick="slidy.update({snap: activate(this, options.snap)})">
+                snap
+            </button>
+            <button id="loop" onclick="slidy.update({loop: activate(this, options.loop)})">
+                loop
+            </button>
+            <button id="vertical" onclick="slidy.update({vertical: activate(this, options.vertical)})">
+                vertical
+            </button>
+        </nav>
+        <form>
+            <fieldset>
+                <!-- <label>
+                    limit
+                    <input name="limit" type="number" value="options.limit" size="5" step="1" min="1" max="100" />
+                </label> -->
+                <label>
+                    width
+                    <input onchange="setVar(section, this.name, this.value)" name="width" size="5" />
+                </label>
+                <label>
+                    gap
+                    <input onchange="setVar(section, this.name, this.value)" name="gap" size="5" step="1" min="0"
+                        max="100" />
+                </label>
+                <label>
+                    duration
+                    <input onchange="changeValue()" name="duration" type="number" size="5" step="1" min="100"
+                        max="1000" />
+                </label>
+                <label>
+                    gravity
+                    <input onchange="changeValue()" name="gravity" type="number" size="5" step="0.1" min="0.1"
+                        max="2" />
+                </label>
+                <!-- <label>
+                    align
+                    <select bind:value={align}>
+                        <option value="start">← start</option>
+                        <option value="middle">middle</option>
+                        <option value="end">end →</option>
+                    </select>
+                </label> -->
+            </fieldset>
+        </form>
+    </main>
 
-            function prev() {
-                slidy.to(options.index - 1);
-            }
-            function next() {
-                slidy.to(options.index + 1);
-            }
-            function goto(i) {
-                slidy.to(i);
-            }
-            function randomQ(min, max) {
-                return Math.floor(Math.random() * (max - min + 1)) + min;
-            }
+    <script>
+        let position = 0,
+            slidy = null,
+            dark = window.matchMedia('(prefers-color-scheme: dark)').matches,
+            page = randomQ(1, 69),
+            limit = 9
 
-            function activate(node, prop) {
-                node.classList.toggle('active');
-                prop = !prop;
-                console.log(prop);
-                return prop;
-                // for (const key in options) {
-                //     if (options[key] !== prop[key]) {
-                //         options[key] = prop[key]
-                //         return prop[key];
-                //     }
-                // }
-            }
+        let options = {
+            index: 4,
+            length: limit,
+            snap: true,
+            loop: false,
+            clamp: false,
+            gravity: 1.2,
+            duration: 375,
+            vertical: false,
+        };
 
-            async function getPhotos(node, page, limit) {
-                fetch(`https://picsum.photos/v2/list?limit=${limit}&page=${page}`)
-                    .then(async (res) => {
-                        const photos = await res.json();
-                        node.innerHTML = photos
-                            .map(
-                                (d, i) =>
-                                    `<li data-id="${i}"><img src="${
-                                        d.download_url
-                                    }" width="${d.width / 5}" height="${
-                                        d.height / 5
-                                    }" alt="${i}"/></li>`
-                            )
-                            .join('');
-                        nav.innerHTML = photos
-                            .map(
-                                (d, i) => `<button onclick="slidy.to(${i})">${i}</button>`
-                            )
-                            .join('');
-                    })
-                    .then(() => {
-                        slidy = Slidy.slidy(node, options);
-                    });
-            }
+        const section = document.querySelector('section'),
+            node = document.querySelector('#slidy'),
+            nav = document.querySelector('#dots'),
+            stats = document.querySelector('#stats'),
+            buttons = document.querySelectorAll('button'),
+            inputs = document.querySelectorAll('input')
 
-            window.onload = () => {
-                console.log(window.Slidy);
+        window.onload = () => {
 
-                node = document.querySelector('#slidy');
-                nav = document.querySelector('#dots');
-                stats = document.querySelector('#stats');
+            getPhotos(node, page, limit);
 
-                getPhotos(node, page, limit);
-
-                node.addEventListener('mount', (e) => {
-                    // slidy.to(7);
-                });
-
-                node.addEventListener('move', (e) => {
-                    indexing(e.detail.index);
-                    scrolling(e.detail.position);
-                });
-
-                function scrolling(p) {
-                    scrollPos = p;
-                    stats.innerHTML = `index: [<b>${
-                        options.index
-                    }</b>], scrollPos: <b>${Math.trunc(scrollPos)}</b>px`;
+            node.addEventListener('mount', (e) => {
+                console.log(e, options)
+                for (const button of buttons) {
+                    if (options[button.id] || button.id === 'dark' && dark) button.classList.add('active')
+                    // else if(button.id === 'dark' && dark) 
                 }
-
-                function indexing(x) {
-                    options.index = x;
-                    const cix = Math.floor(node.children.length / 2);
-
-                    Array.from(node.children).forEach((n, i) =>
-                        i === (options.loop ? cix : x)
-                            ? n.classList.add('active')
-                            : n.classList.remove('active')
-                    );
-                    Array.from(nav.children).forEach((n, i) =>
-                        i === x ? n.classList.add('active') : n.classList.remove('active')
-                    );
+                for (const input of inputs) {
+                    if (input.name in options) input.value = options[input.name]
+                    else if (input.name === 'width') input.value = getVar(section, '--width')
+                    else if (input.name === 'gap') input.value = getVar(section, '--gap')
                 }
+            });
 
-                const observer = new MutationObserver((mutationRecords, observer) => {
-                    mutationRecords.forEach((record) => {
-                        // console.log(index, scrollPos, node.SLIDY)
-                        // console.dir(record)
-                        // console.dir(record.target.dataset.position)
-                        // slidy.update(options)
-                        // record.target.classList.toggle('active')
-                        // console.log(index, scrollPos)
-                    });
-                    // console.dir(mutationRecords.target.style.transform); // console.log(изменения)
+            node.addEventListener('move', (e) => {
+                indexing(e.detail.index);
+                scrolling(e.detail.position);
+            });
+
+            function scrolling(p) {
+                position = p;
+                stats.innerHTML = `index: [<b>${options.index
+                    }</b>], position: <b>${Math.trunc(position)}</b>px`;
+            }
+
+            function indexing(x) {
+                options.index = x;
+                const cix = Math.floor(node.children.length / 2);
+
+                Array.from(node.children).forEach((n, i) =>
+                    i === (options.loop ? cix : x)
+                        ? n.classList.add('active')
+                        : n.classList.remove('active')
+                );
+                Array.from(nav.children).forEach((n, i) =>
+                    i === x ? n.classList.add('active') : n.classList.remove('active')
+                );
+            }
+        };
+
+        function prev() {
+            slidy.to(options.index - 1);
+        }
+        function next() {
+            slidy.to(options.index + 1);
+        }
+        function goto(i) {
+            slidy.to(i);
+        }
+        function randomQ(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
+
+        function activate(node, prop) {
+            node.classList.toggle('active');
+            if (event.target.id === 'dark') {
+                document.documentElement.setAttribute('scheme', !dark ? 'dark' : 'light')
+                dark = !dark
+            }
+            prop = !prop;
+            return prop;
+            // for (const key in options) {
+            //     if (options[key] !== prop[key]) {
+            //         options[key] = prop[key]
+            //         return prop[key];
+            //     }
+            // }
+        }
+
+        function changeValue() {
+            options[event.target.name] = event.target.value
+        }
+        function getVar(node, name) {
+            return getComputedStyle(node).getPropertyValue(name);
+        }
+        function setVar(node, name, value) {
+            return node.style.setProperty(`--${name}`, value);
+        }
+
+        async function getPhotos(node, page, limit) {
+            fetch(`https://picsum.photos/v2/list?limit=${limit}&page=${page}`)
+                .then(async (res) => {
+                    const photos = await res.json();
+                    node.innerHTML = photos
+                        .map(
+                            (d, i) =>
+                                `<li><img src="${d.download_url
+                                }" width="${d.width / 5}" height="${d.height / 5
+                                }" alt="${i}"/></li>`
+                        )
+                        .join('');
+                    nav.innerHTML = photos
+                        .map(
+                            (d, i) => `<button onclick="slidy.to(${i})">${i}</button>`
+                        )
+                        .join('');
+                })
+                .then(() => {
+                    slidy = Slidy.slidy(node, options);
                 });
-                const options = {
-                    childList: true, // наблюдать за непосредственными детьми
-                    subtree: true, // и более глубокими потомками
-                    characterDataOldValue: true, // передавать старое значение в колбэк
-                    attributes: true,
-                    attributeFilter: ['style', 'data-index'],
-                    characterData: true,
-                };
-                // observer.observe(node, options);
+        }
+    </script>
+</body>
 
-                // slidy.to(15)
-                // slidy.update()
-                // slidy.destroy()
-            };
-        </script>
-    </head>
-
-    <body>
-        <fieldset>
-            <legend>
-                <h1>Slidy 3.0<sup>nativeJS</sup></h1>
-                <button onclick="activate(this, stend)">stend</button>
-                <button onclick="activate(this, images)">images</button>
-                <button onclick="activate(this, dark)">dark</button>
-                <p id="stats" />
-            </legend>
-        </fieldset>
-        <main>
-            <section style="--gap: 16px; --flow: row; --width: auto" tabindex="0">
-                <ul id="slidy" />
-            </section>
-            <nav id="dots"></nav>
-            <nav>
-                <button onclick="slidy.to(options.index - 1)">←</button>
-                <button onclick="slidy.to(index + 1)">→</button>
-                <button onclick="getPhotos(node, randomQ(1, 69), 9)">refresh</button>
-                <button
-                    onclick="slidy.update({loop: activate(this, options.loop)})"
-                    class:active="{anchored}"
-                >
-                    loop
-                </button>
-            </nav>
-        </main>
-    </body>
 </html>
