--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -13,22 +13,21 @@
 </head>
 
 <body>
-    <fieldset>
-        <legend>
-            <img alt="Slidy" width="50" height="50" src="favicon.png" style="vertical-align: bottom" />
-            <h1>Slidy 3.0<sup>nativeJS</sup></h1>
-            <button id="dark" onclick="activate(this, dark)" style="position: absolute; right: 1em; top: 1rem">
-                dark
-            </button>
-            <p id="stats" />
-        </legend>
-    </fieldset>
+    <header>
+        <img alt="Slidy" width="50" height="50" src="favicon.png" style="vertical-align: bottom" />
+        <h1>Slidy 3.0<sub>nativeJS</sub>
+            <sup id="stats" />
+        </h1>
+        <button id="dark" onclick="activate(this, dark)">dark</button>
+    </header>
     <main>
         <section style="--gap: 1em; --flow: row; --width: auto" tabindex="0">
             <ul id="slidy">
                 <li style="display: grid; place-items: center">Loading...</li>
             </ul>
         </section>
+    </main>
+    <footer>
         <nav id="dots"></nav>
         <nav id="buttons">
             <button id="prev" onclick="slidy.to(options.index - 1)">←</button>
@@ -52,46 +51,42 @@
         <form>
             <fieldset>
                 <!-- <label>
-                    limit
-                    <input name="limit" type="number" value="options.limit" size="5" step="1" min="1" max="100" />
-                </label> -->
-                <label>
-                    width
+                limit
+                <input name="limit" type="number" value="options.limit" size="5" step="1" min="1" max="100" />
+            </label> -->
+                <label title="width">
                     <input onchange="setVar(section, this.name, this.value)" name="width" size="5" />
                 </label>
-                <label>
-                    gap
+                <label title="gap">
                     <input onchange="setVar(section, this.name, this.value)" name="gap" size="5" step="1" min="0"
                         max="100" />
                 </label>
-                <label>
-                    duration
+                <label title="duration">
                     <input onchange="changeValue()" name="duration" type="number" size="5" step="1" min="100"
                         max="1000" />
                 </label>
-                <label>
-                    gravity
+                <label title="gravity">
                     <input onchange="changeValue()" name="gravity" type="number" size="5" step="0.1" min="0.1"
                         max="2" />
                 </label>
                 <!-- <label>
-                    align
-                    <select bind:value={align}>
-                        <option value="start">← start</option>
-                        <option value="middle">middle</option>
-                        <option value="end">end →</option>
-                    </select>
-                </label> -->
+                align
+                <select bind:value={align}>
+                    <option value="start">← start</option>
+                    <option value="middle">middle</option>
+                    <option value="end">end →</option>
+                </select>
+            </label> -->
             </fieldset>
         </form>
-    </main>
+    </footer>
 
     <script>
         let position = 0,
             slidy = null,
             dark = window.matchMedia('(prefers-color-scheme: dark)').matches,
             page = randomQ(1, 69),
-            limit = 9;
+            limit = 9
 
         let options = {
             index: 4,
@@ -127,7 +122,7 @@
             }
 
             node.addEventListener('mount', (e) => {
-                console.log(e, options, buttons, inputs);
+                // console.log(e, options, buttons, inputs);
             });
 
             node.addEventListener('move', (e) => {
